syntax = "proto3";
import "Protos/wozobject.proto";
import "Protos/timeperiod.proto";
import "Protos/subobject.proto";
import "Protos/comparables.proto";

option csharp_namespace = "gRPCServer.Protos";

package taxations;

// The service definition.
service TaxationObjects {
  rpc GetTaxationsObject (TaxationRequest) returns (TaxationsObject);
}

message TaxationRequest {
  int64 wozobjectnummer = 1;
  int64 prijspeilid = 2;
}

message TaxationsObject{
  int64 wozobjectnummer = 1;
  int64 prijspeilid = 2;
  repeated Taxation taxations =3;
}

message Taxation {
  int64 id = 1;
  timeperiods.TimePeriodRecord period =2;
  string status =3;
  bool active =4;
  wozobject.FullWozObjectReply freezeWozObject = 5;
  repeated subobject.WozSubObjectReply freezeDeelobjects =6;
  repeated comparables.ComparableObject comparable_objects =7;
}