syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "gRPCServer.Protos";

package wozobject;

// The service definition.
service WozObjects {
  // Sends a greeting
  rpc GetWozObject (WozObjectRequestById) returns (WozObjectsReply);
  rpc GetWozObjects (WozObjectRequestByIds) returns (WozObjectsReply);
  rpc GetFullWozObject (WozObjectRequestById) returns (stream FullWozObjectReply);
  rpc GetWozObjectImages (WozObjectImageRequest) returns (stream WozObjectImageReply);
  rpc UploadWozObjectImage (UploadImageRequest) returns (UploadImageReply);
  rpc SaveFullWozObject (FullWozObjectReply) returns (FullWozObjectSaveReply);
}

// The request message containing the object's id.
message WozObjectRequestById {
  int64 wozobjectnummer = 1;
}

// The request message containing multiple object's id.
message WozObjectRequestByIds {
  repeated int64 wozobjectnummers = 1;
}

// The response message containing the WozObjects.
message WozObjectsReply {
    repeated WozObjectReply wozobjects = 1;
}

message FullWozObjectSaveReply {
    bool isSuccess = 1;
}

message WozObjectReply {
  int64 wozobjectnummer = 1;
  google.protobuf.StringValue gemeentenaam = 2;
  google.protobuf.StringValue straatnaam = 3;
  int32 huisnummer = 4;
  google.protobuf.StringValue huisletter = 5;
  google.protobuf.StringValue huisnummertoevoeging = 6;
  google.protobuf.StringValue postcode = 7;
  google.protobuf.StringValue soortobjectcode = 8;
  google.protobuf.DoubleValue lat =9;
  google.protobuf.DoubleValue lon =10;
}

message FullWozObjectReply {
  int64 wozobjectnummer = 1;
  google.protobuf.StringValue gemeentenaam = 2;
  google.protobuf.StringValue straatnaam = 3;
  int32 huisnummer = 4;
  google.protobuf.StringValue huisletter = 5;
  google.protobuf.StringValue huisnummertoevoeging = 6;
  google.protobuf.StringValue postcode = 7;
  google.protobuf.StringValue soortobjectcode = 8;
  google.protobuf.StringValue wijkcode = 9;
  google.protobuf.StringValue buurtcode = 10;
  google.protobuf.StringValue woonplaats = 11;
  google.protobuf.StringValue locatieomschrijving = 12;
  google.protobuf.StringValue indicatieligging = 13;
  google.protobuf.StringValue omschrijving = 14;
  google.protobuf.DoubleValue lat =15;
 google.protobuf.DoubleValue lon =16;
}

message WozObjectImageRequest{
    int64 wozobjectnummer =1;
    bool only_main =2;
}

message WozObjectImageReply{
    bytes image_data = 1;
    bool is_main =2;
}

message UploadImageRequest{
    int64 wozobjectnummer =1;
    bytes image_data = 2;
    bool is_main =3;
}

message UploadImageReply{
    bool succes =1;
}